--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <th>Date</th>
         </tr>
         <tr>
-            <td></td>
+            
+            <td>Mechanics</td>
+            <td>2018-2019</td>
         </tr>
     </table>
     
