--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             <td>Mechanics</td>
             <td>2018-2019</td>
         </tr>
+        <tr>
+            
+            <td>Programming</td>
+            <td>2020-2021</td>
+        </tr>
     </table>
     
 </body>
